# android-rs-glue-test

./: Cargo.toml  Makefile
src/: main.rs
